EB-50 Fix alignment in mobile menu

--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -7,7 +7,7 @@
     width: 100vw;
     height: 100vh;
     background-color: rgba($color-blue, 1);
-    padding: 10rem 2rem;
+    padding: 10rem 6rem;
     display: flex;
     flex-direction: column;
     align-items: flex-end;
@@ -34,6 +34,10 @@
         }
     }
 
+    &__item:last-child {
+        margin-right: -3.1rem;
+    }
+
     &__item {
         margin-bottom: 3rem;
 
@@ -45,7 +49,7 @@
                 min-width: 150px;
                 max-width: 250px;
                 margin-top: 1rem;
-                padding: 1rem 2rem 2rem 1rem;
+                padding: 1rem 4rem 2rem 1rem;
                 background-color: $color-blue;
                 list-style-type: none;
                 position: initial;
